@@ -10,14 +10,17 @@ DIST docutils-0.9.1.tar.gz 1541437 SHA256 e89f187dbbc6674f839239c89fec44af9f1880
 DIST docutils-0.9.tar.gz 1534138 SHA256 ff49bf77e9135490a73740d884b418ab8b982ad16ee52cfe796d059c592ea245 SHA512 ce015d79093e8fa0e14851c5f122a2c2d38981c82358bb1a9219271af2d12bf3219abbeed362114342ebd5a7173e0bf4a3686987c70bb950c72c2ffa3fed2440 WHIRLPOOL b33d34a5de0adb7e77a3c053b3cd800152e1bcdac1006aac5b7450465844d176a2a7e9b6e41507343bcfc747aba9316f01df661f84555d5a9bc28a42db202320
 DIST glep-0.4-r1.tbz2 4667 SHA256 d0b421869fb3437e96484687fd57f34d4f5cdd5a1fbdb2314f1474b1f9afa058 SHA512 098d9f5043a60af9dfac63f6472b576e66ffeda924902ca825ed63f573aeb8bad7c9f9a6853fd99e648683488ee6db2ee55c139df3dde06983b72cfb5dd8cdd3 WHIRLPOOL 277cdf4a7fe70990864a4f0fd592561bcf5edc1de8d4830da96c75093d47d8d64214b95ac5ae7960670a8520650a5e23355df248f61bddcd9cd5dc23cab0fe19
 EBUILD docutils-0.8.1.ebuild 4480 SHA256 d5dc8b07a95adb229c02290374ed4c82ac79f0557535bdb47fafd41c2af7fd7f SHA512 96739bae1783582ec62d5546189559c3d88ece05c44fcfb5ec0272f8655f89266501c880ddb55b4b0d5b331a3daab82fda8700bfa8be5abcda4aecd0570a47d5 WHIRLPOOL 0234d2259a4d1cffc251294fd7119515dfa057d8800804336104eb45c433c51bc591789961b54f5ea92fc8bcf87b9a75697cf676ed386170845560f6ad9ba4e2
+EBUILD docutils-0.9.1-r1.ebuild 2800 SHA256 f3f613361856d1c6c046ebe570aee8b2a1f5a8b4aa25b4d696ca41c6945ba0b2 SHA512 4c7e48b0f9f7e899fc207be736ebe0f56e202534ffd2d0a7b7346ae3e735a14d0ed0911f16f03cdb4ed62602bc2f2937d611efca019ddb5c923dc7205c38caf4 WHIRLPOOL a8c9d6d92a9dcf1804e51ca9c1b3c9172878cbbc599810d70dd383304ea9fd29800248d0f3b2586c855d0013fb942d025e4043d622d7d21b2ddc6ae393e710ed
 EBUILD docutils-0.9.1.ebuild 3597 SHA256 f0f65506c49c23eae7b79bc4546ee3bbbda0691aeaf6b44e1768e25888901114 SHA512 bb093956b65f8b5bcde72292784f3be4f578356297a03bb2ba65f1fcb7015712dbab5e332f5be7427d6cdb6f22ba6c7c0e073d4a307c7f6115d261694432ef5e WHIRLPOOL fe0ce2582fcfc86cd6c713c5fd5f4b3550e53dd034ad1816938ed30610b8be4d2853200afce130b6e0648371d59d45d61812ddb1eeaf1edfd7aa61d309c2ba13
 EBUILD docutils-0.9.ebuild 4104 SHA256 866a488bc9bb1683358e9726d005a0580a77683833dccb2e3e9f7649f8fdd6ce SHA512 ee9cc41c56fcc1e41074ed7642525601debace25186c9a44781737999dc01c58d56f7e0b02f8cb31b49dbf13e749bc16ed4a2bccb561ff3b99667a227523f696 WHIRLPOOL b6bc09b2c75f8b3d621b8fdfc76a276a34b9cfffd7c48e8898ba56ea9919fd89baacfa0f6c3f4efc3bbf88573d3126d45bbf2b914b07910700ee17c9994a2009
-MISC ChangeLog 22717 SHA256 7acd57bc7428d3d87480b5c9af036246bed1695fd0ccbf305589dad5966f2af9 SHA512 dc352e46420306d409d19f770dc2266b0c184296cebca6eb02e29dd5d8d09d5cb0ccf9feae8712c414c0da863b582d83ff1f415351ee307c655b205b1fe61b5d WHIRLPOOL be2b9b39ae5d7ec9452033e7280128ce057fc82af8ccdd7584bc47f7600ad2cd8e85f1da4acc152c737412a669850c49c269ef5ff05f5c85e2fe62e17bfef72c
+MISC ChangeLog 22855 SHA256 df6e64c0703100df602f799565f3126f457b38a51d78d7ebcf41a148a8e6d2e3 SHA512 5e3ee596956d7caa39516ff2e605c26bea0de346226ecf98036d89b05ed287b80f3ce6e91a0292357c75a0b495a10119aa80613ef85ff5bd0dcd5cdc760253c4 WHIRLPOOL 754fc792242e3cf3a767619e4c32df72b9bf56410ff274476935d8a2acd78d888a3a98be44b3b2fb82f006b6bdd55b326b9d74966c5282c41bf2442ac40d7f71
 MISC metadata.xml 224 SHA256 0bb6bfd1577f4800009497c7813935f712ae6a44dbbdec1a903e79eaa5f21755 SHA512 84a00eb058c5f923404a2ede0df0a2ef9a1b4143a2f7d7b8ddfd5b68c8342dc68e89b5042e603a93b756e8e69cb92a5a32e6aa9ced869d30de1e41c874e080f3 WHIRLPOOL 9392f13e54a9fa3df0396729edecc43709acb478f2d67add1f0b3aeeb16c902fac3d970dcacab9be6ae1094f8700848d790acb260e288440ca80f9be8d0ae0b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBw0HIACgkQC77qH+pIQ6T6awD+KgL0MY61u27p1LuaBwQTw3oI
-el/vfCfnI1AQ2dKsa9IA/AsELwVV/GqqvkJ6P5HZn8JFGU2W5ZsjXjQq2w4py3Bd
-=JdSf
+iJwEAQEIAAYFAlDNAWkACgkQfXuS5UK5QB2f4gP9GgQd/XZVmkBZg+pVpj0XdDiv
+1pazHvrYKFXvESSvpZvnbAnExae548NhxrU/lj2F9tl3kJMui6og+azfM6+IPTxi
+ptdnFE+n9KoZqWNjdGFAMjhLTh0xB0qb5srZzgL/m7jxG/oFGKJESHVesLOYc/uL
+hJg7htq9wugKUsjsuFw=
+=UiJb
 -----END PGP SIGNATURE-----
