@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/docutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.159 2012/10/07 00:44:32 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.160 2012/12/15 23:02:00 mgorny Exp $
+
+*docutils-0.9.1-r1 (15 Dec 2012)
+
+  15 Dec 2012; Michał Górny <mgorny@gentoo.org> +docutils-0.9.1-r1.ebuild:
+  Migrate to distutils-r1.
 
   07 Oct 2012; Mike Gilbert <floppym@gentoo.org> docutils-0.8.1.ebuild,
   docutils-0.9.1.ebuild, docutils-0.9.ebuild:
